--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,29 +19,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
         type="text/css">
 
-
     <title>Imgeech</title>
 </head>
 
 <body>
-    <!-- Navigation -->
-    <a class="menu-toggle rounded" href="#">
-        <i class="fas fa-bars"></i>
-    </a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand">
-                <a class="js-scroll-trigger" href="#page-top">Home</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#demo">Demo</a>
-            </li>
-        </ul>
-    </nav>
-
     <!-- Masthead -->
     <header class="masthead text-white">
         <div class="overlay"></div>
@@ -54,7 +35,7 @@
                     <form action="/upload" method="POST" enctype="multipart/form-data">
                         <div class="custom-file mb-3">
                             <input type="file" name="file" id="file" class="custom-file-input">
-                            <label for="file" class="custom-file-label">Choose File</label>
+                            <label for="file" class="custom-file-label">Select image (jpeg/png)</label>
                         </div>
                         <input type="submit" value="Submit" class="btn btn-primary btn-block">
                     </form>
@@ -62,35 +43,39 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 m-auto text-center">
 
-                <hr>
-                <% if(files){ %>
-                <% files.forEach(function(file) { %>
-                <div class="card card-body mb-3">
-                    <% if(file.isImage) { %>
-                    <img id="ml" src="image/<%= file.filename %>" alt="">
-                    <hr>
-                    <h2>Result</h2>
-                    <span id="progress"></span>
-                    <div id="result"></div>
-                    <hr>
+    <!-- cards with results -->
+    <section class="mt-5">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 m-auto text-center">
+                    <div class="display-4 mb-3">Demo</div>
+                    <% if(files){ %>
+                    <% files.forEach(function(file) { %>
+                    <div class="card card-body mb-3">
+                        <% if(file.isImage) { %>
+                        <img id="ml" src="image/<%= file.filename %>" alt="">
+                        <hr>
+                        <h2>Result</h2>
+                        <span id="progress"></span>
+                        <div id="result"></div>
+                        <hr>
+                        <% } else { %>
+                        <%= file.filename %>
+                        <% } %>
+                        <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
+                            <button class="btn btn-danger btn-block mt-4">Delete</button>
+                        </form>
+                    </div>
+                    <% }) %>
                     <% } else { %>
-                    <%= file.filename %>
+                    <p>No files to show</p>
                     <% } %>
-                    <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
-                        <button class="btn btn-danger btn-block mt-4">Delete</button>
-                    </form>
                 </div>
-                <% }) %>
-                <% } else { %>
-                <p>No files to show</p>
-                <% } %>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
 
