--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,12 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
         type="text/css">
 
@@ -44,6 +44,8 @@
         </div>
     </header>
 
+
+
     <!-- cards with results -->
     <section class="mt-5">
         <div class="container">
@@ -55,7 +57,7 @@
                     <% files.forEach(function(file) { %>
                     <div class="card card-body mb-3">
                         <% if(file.isImage) { %>
-                        <img id="ml" src="image/<%= file.filename %>" alt="">
+                        <img id="ml" class="img-fluid rounded" src="image/<%= file.filename %>" alt="">
                         <hr>
                         <h2>Result</h2>
                         <span id="progress"></span>
@@ -77,6 +79,47 @@
         </div>
     </section>
 
+    <!-- sample images -->
+    <section class="">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="display-4 mb-4 text-center">Sample Images</div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <a href="/s1" class="d-block mb-4">
+                            <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a href="#" class="d-block mb-4">
+                            <img src="images/samples/card.jpg" class="img-fluid rounded" alt="img2" />
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a href="#" class="d-block mb-4">
+                            <img src="images/samples/mobile.jpg" class="img-fluid rounded" alt="img3">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a href="#" class="d-block mb-4">
+                            <img src="images/samples/mobile1.jpeg" class="img-fluid rounded" alt="img1">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a href="#" class="d-block mb-4">
+                            <img src="images/samples/para.png" class="img-fluid rounded" alt="img2" />
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a href="#" class="d-block mb-4">
+                            <img src="images/samples/scanned2.jpg" class="img-fluid rounded" alt="img3">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
 
     <footer class="footer text-center">
@@ -87,12 +130,15 @@
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
     <script src='https://cdn.jsdelivr.net/gh/naptha/tesseract.js@v1.0.14/dist/tesseract.min.js'></script>
     <script src="js/main.js"></script>
 </body>
