--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,27 +91,27 @@
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a href="#" class="d-block mb-4">
+                        <a href="s2" class="d-block mb-4">
                             <img src="images/samples/card.jpg" class="img-fluid rounded" alt="img2" />
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a href="#" class="d-block mb-4">
+                        <a href="s3" class="d-block mb-4">
                             <img src="images/samples/mobile.jpg" class="img-fluid rounded" alt="img3">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a href="#" class="d-block mb-4">
+                        <a href="s4" class="d-block mb-4">
                             <img src="images/samples/mobile1.jpeg" class="img-fluid rounded" alt="img1">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a href="#" class="d-block mb-4">
+                        <a href="s5" class="d-block mb-4">
                             <img src="images/samples/para.png" class="img-fluid rounded" alt="img2" />
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a href="#" class="d-block mb-4">
+                        <a href="s6" class="d-block mb-4">
                             <img src="images/samples/scanned2.jpg" class="img-fluid rounded" alt="img3">
                         </a>
                     </div>
