--- a/views/s1.ejs
+++ b/views/s1.ejs
@@ -30,13 +30,14 @@
         <div class="container">
             <div class="jumbotron">
                 <div class="display-4 mb-3">Scanned Image</div>
-
+                <div class="card card-body">
                 <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
                 <hr>
                 <h2>Result</h2>
                 <span id="progress"></span>
                 <div id="result"></div>
                 <hr>
+                </div>
             </div>
         </div>
     </section>
