--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <a href="/s1" class="d-block mb-4">
+                        <a href="s1" class="d-block mb-4">
                             <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
                         </a>
                     </div>
