--- a/views/s3.ejs
+++ b/views/s3.ejs
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+<!-- fontawesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,12 +25,25 @@
         width: 100%;
         box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
     }
+    .imp{
+    display: flex;
+    }
+
+    .cen {
+    flex-grow: 1;
+    text-align: center;
+    }
 </style>
 
 <body>
     <section class="mt-5 text-center">
         <div class="container">
             <div class="jumbotron">
+                <div class="imp mb-3">
+                    <a href="s2"><i class="fas fa-chevron-left fa-3x"></i></a>
+                    <a href="/" class="cen"><i class="fas fa-home fa-3x cen"></i></a>
+                    <a href="s4"><i class="fas fa-chevron-right fa-3x"></i></a>
+                </div>
                 <div class="display-4 mb-3">Scanned Image</div>
                 <div class="card card-body">
                 <img src="images/samples/mobile.jpg" class="img-fluid rounded" alt="img1">
