--- a/views/s1.ejs
+++ b/views/s1.ejs
@@ -6,19 +6,21 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-<!-- fontawesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+
 </head>
 <style>
     body {
-    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
 
     .rounded {
@@ -26,13 +28,14 @@
         width: 100%;
         box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
     }
-    .imp{
-    display: flex;
+
+    .imp {
+        display: flex;
     }
 
     .cen {
-    flex-grow: 1;
-    text-align: center;
+        flex-grow: 1;
+        text-align: center;
     }
 </style>
 
@@ -47,32 +50,35 @@
                 </div>
                 <div id="mid" class="display-4 mb-3 text-center">Scanned Image</div>
                 <div class="card card-body">
-                <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
-                <hr>
-                <h2>Result</h2>
-                <span id="progress"></span>
-                <div id="result"></div>
-                <hr>
+                    <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
+                    <hr>
+                    <h2>Result</h2>
+                    <span id="progress"></span>
+                    <div id="result"></div>
+                    <hr>
                 </div>
             </div>
         </div>
     </section>
 
     <script>
-    let img = new Image()
-    img.src = "images/samples/scanned.jpg";
+        let img = new Image()
+        img.src = "images/samples/scanned.jpg";
 
-    img.onload = function () {
-    console.log("loaded...", "$$$$");
-    Tesseract.recognize(img).progress((progress) => {
-    if (progress.status === "recognizing text") {
-    $('#progress').text(progress.progress * 100 + "%");
-    }
-    }).then((result) => {
-    console.log(result, "$$$$");
-    $('#result').text(result.text);
-    })
-    }
+        img.onload = function () {
+            console.log("loaded...", "$$$$");
+            Tesseract.recognize(img).progress((progress) => {
+                if (progress.status === "recognizing text") {
+                    $('#progress').text(progress.progress * 100 + "%");
+                }
+            }).then((result) => {
+                console.log(result, "$$$$");
+                $('#result').text(result.text);
+                var node = document.getElementById('result'),
+                    textContent = node.textContent;
+                responsiveVoice.speak(textContent);
+            })
+        }
     </script>
 
     <!-- Optional JavaScript -->
