--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,12 @@ h6 {
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
+.rounded:hover{
+    transform: scale(1.05);
+    transition: transform 0.2s;
+
+}
+
 header.masthead {
     position: relative;
     background-color: #343a40;
