--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
         type="text/css">
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
     <title>Imgeech</title>
 </head>
@@ -102,7 +103,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <a href="s4" class="d-block mb-4">
-                            <img src="images/samples/mobile1.jpeg" class="img-fluid rounded" alt="img1">
+                            <img src="images/samples/main.jpg" class="img-fluid rounded" alt="img1">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
