--- a/views/s5.ejs
+++ b/views/s5.ejs
@@ -47,7 +47,7 @@
                     <a href="/" class="cen"><i class="fas fa-home fa-3x cen"></i></a>
                     <a href="s6"><i class="fas fa-chevron-right fa-3x"></i></a>
                 </div>
-                <div class="display-4 mb-3">Scanned Image</div>
+                <div class="display-4 mb-3">Sample Image</div>
                 <div class="card card-body">
                     <img src="images/samples/para.png" class="img-fluid rounded" alt="img1">
                     <hr>
