--- a/views/s1.ejs
+++ b/views/s1.ejs
@@ -48,7 +48,7 @@
                     <a href="/" class="cen"><i class="fas fa-home fa-3x cen"></i></a>
                     <a href="s2"><i class="fas fa-chevron-right fa-3x"></i></a>
                 </div>
-                <div id="mid" class="display-4 mb-3 text-center">Scanned Image</div>
+                <div id="mid" class="display-4 mb-3 text-center">Sample Image</div>
                 <div class="card card-body">
                     <img src="images/samples/scanned.jpg" class="img-fluid rounded" alt="img1">
                     <hr>
