--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
                             <input type="file" name="file" id="file" class="custom-file-input">
                             <label for="file" class="custom-file-label">Select image (jpeg/png)</label>
                         </div>
-                        <input type="submit" value="Submit" class="btn btn-primary btn-block">
+                        <input type="submit" value="Upload" class="btn btn-primary btn-block">
                     </form>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     </div>
                     <% }) %>
                     <% } else { %>
-                    <p>No files to show</p>
+                    <p>No image to show. Please upload one :)</p>
                     <% } %>
                 </div>
             </div>
