--- a/views/s5.ejs
+++ b/views/s5.ejs
@@ -36,6 +36,17 @@
         flex-grow: 1;
         text-align: center;
     }
+
+    .click{
+        cursor: pointer;
+    }
+    .fa-volume-up{
+        color: #047AFB;
+
+    }
+    .fa-volume-up:hover{
+        color:#0056B3;
+    }
 </style>
 
 <body>
@@ -54,6 +65,8 @@
                     <h2>Result</h2>
                     <span id="progress"></span>
                     <div id="result"></div>
+                    <br>
+                    <div id="speak"></div>
                     <hr>
                 </div>
             </div>
@@ -73,10 +86,14 @@
             }).then((result) => {
                 console.log(result, "$$$$");
                 $('#result').text(result.text);
-                var node = document.getElementById('result'),
-                    textContent = node.textContent;
-                responsiveVoice.speak(textContent);
+                $('#speak').html('<a class="click" onclick="playsound();"><i class="fas fa-volume-up fa-4x"></i></a>');
+                
             })
+        }
+        function playsound(){
+        var node = document.getElementById('result'),
+        textContent = node.textContent;
+        responsiveVoice.speak(textContent);
         }
     </script>
 
