--- a/views/s1.ejs
+++ b/views/s1.ejs
@@ -37,10 +37,21 @@
         flex-grow: 1;
         text-align: center;
     }
+
+    .click{
+    cursor: pointer;
+    }
+    .fa-volume-up{
+    color: #047AFB;
+
+    }
+    .fa-volume-up:hover{
+    color:#0056B3;
+    }
 </style>
 
 <body>
-    <section class="mt-5">
+    <section class="mt-5 text-center">
         <div class="container">
             <div class="jumbotron">
                 <div class="imp mb-3">
@@ -55,6 +66,8 @@
                     <h2>Result</h2>
                     <span id="progress"></span>
                     <div id="result"></div>
+                    <br>
+                    <div id="speak"></div>
                     <hr>
                 </div>
             </div>
@@ -74,10 +87,13 @@
             }).then((result) => {
                 console.log(result, "$$$$");
                 $('#result').text(result.text);
-                var node = document.getElementById('result'),
-                    textContent = node.textContent;
-                responsiveVoice.speak(textContent);
+                $('#speak').html('<a class="click" onclick="playsound();"><i class="fas fa-volume-up fa-4x"></i></a>');
             })
+        }
+        function playsound(){
+        var node = document.getElementById('result'),
+        textContent = node.textContent;
+        responsiveVoice.speak(textContent);
         }
     </script>
 
