--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,8 @@
                         <h2>Result</h2>
                         <span id="progress"></span>
                         <div id="result"></div>
+                        <br>
+                        <div id="speak"></div>
                         <hr>
                         <% } else { %>
                         <%= file.filename %>
